--- a/BlackSys/Web.config
+++ b/BlackSys/Web.config
@@ -48,14 +48,16 @@
   </system.webServer>
   <connectionStrings>
     <!--<CONEXION REMOTA"/>-->
-    <add name="BlackSysConnection" connectionString="Data Source=LOCAL;Initial Catalog=COM_USER;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BlackSysConnection" connectionString="Data Source=LOCAL;Initial Catalog=USR_UCYT;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	  
     <!--<CONEXION REMOTA"/>-->
     <!--
     <add name="BlackSysConnection" connectionString="Data Source=INFO02\SQLDEVELOPER;Initial Catalog=COM_USER;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="COM_BDCEntities" connectionString="metadata=res://*/Models.COM_BDC.csdl|res://*/Models.COM_BDC.ssdl|res://*/Models.COM_BDC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INFO02\SQLDEVELOPER;initial catalog=COM_BDC;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="COMERCIALEntities" connectionString="metadata=res://*/Models.COM_Model.csdl|res://*/Models.COM_Model.ssdl|res://*/Models.COM_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INFO02\SQLDEVELOPER;initial catalog=COMERCIAL;user id=jmercado;password=j123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConCnn" connectionString="Data Source=INFO02\SQLDEVELOPER;Initial Catalog=COMERCIAL;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />--><add name="SISCOMPEntities" connectionString="metadata=res://*/Models.SISCOMP_Model.csdl|res://*/Models.SISCOMP_Model.ssdl|res://*/Models.SISCOMP_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SISCOMP;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UcytAlmaMaterEntities" connectionString="metadata=res://*/Models.Dal.UcytAlmaMater.csdl|res://*/Models.Dal.UcytAlmaMater.ssdl|res://*/Models.Dal.UcytAlmaMater.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=UcytAlmaMater;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="ConCnn" connectionString="Data Source=INFO02\SQLDEVELOPER;Initial Catalog=COMERCIAL;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+	 
+	  <add name="UcytAlmaMaterEntities" connectionString="metadata=res://*/Models.Dal.UcytAlmaMater.csdl|res://*/Models.Dal.UcytAlmaMater.ssdl|res://*/Models.Dal.UcytAlmaMater.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=UcytAlmaMater;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
