--- a/BlackSys/Web.config
+++ b/BlackSys/Web.config
@@ -57,7 +57,8 @@
     <add name="COMERCIALEntities" connectionString="metadata=res://*/Models.COM_Model.csdl|res://*/Models.COM_Model.ssdl|res://*/Models.COM_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INFO02\SQLDEVELOPER;initial catalog=COMERCIAL;user id=jmercado;password=j123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ConCnn" connectionString="Data Source=INFO02\SQLDEVELOPER;Initial Catalog=COMERCIAL;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 	 
-	  <add name="UcytAlmaMaterEntities" connectionString="metadata=res://*/Models.Dal.UcytAlmaMater.csdl|res://*/Models.Dal.UcytAlmaMater.ssdl|res://*/Models.Dal.UcytAlmaMater.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=UcytAlmaMater;user id=jmercado;password=j123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	 
+  <add name="UcytAlmaMaterEntities" connectionString="metadata=res://*/Models.Dal.UcytAlmaMater.csdl|res://*/Models.Dal.UcytAlmaMater.ssdl|res://*/Models.Dal.UcytAlmaMater.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=UcytAlmaMater;user id=jmercado;password=j123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
