--- a/BlackSys/BlackSys.csproj
+++ b/BlackSys/BlackSys.csproj
@@ -122,6 +122,7 @@
     <Content Include="Content\css\CSS Personalizado\zelect.js" />
     <Content Include="Content\css\Custom.css" />
     <Content Include="Content\css\login-3.css" />
+    <Content Include="Content\css\MaterialIncons.css" />
     <Content Include="Content\DynaTables\jquery-1.7.2.min.js" />
     <Content Include="Content\DynaTables\jquery.dynatableSinBuscador.js" />
     <Content Include="Content\DynaTables\jquery.dynatable.css" />
@@ -1361,17 +1362,6 @@
     <Content Include="Views\TblUsuarioClientes\Details.cshtml" />
     <Content Include="Views\TblUsuarioClientes\Edit.cshtml" />
     <Content Include="Views\TblUsuarioClientes\Index.cshtml" />
-    <Content Include="Views\Callcenter\MonitorGeneral.cshtml" />
-    <Content Include="Views\Callcenter\ListarOrdenes.cshtml" />
-    <Content Include="Views\Callcenter\MonitorGeneralOperador.cshtml" />
-    <Content Include="Views\Callcenter\ListarOrdenesOperador.cshtml" />
-    <Content Include="Views\Callcenter\MonitorGeneralSucursal.cshtml" />
-    <Content Include="Views\Callcenter\ListarOrdenesSucursal.cshtml" />
-    <Content Include="Views\Callcenter\MonitorGeneralDetalles.cshtml" />
-    <Content Include="Views\Callcenter\ListarOrdenesDetalle.cshtml" />
-    <Content Include="Views\Callcenter\ConsultarOrden.cshtml" />
-    <Content Include="Views\Callcenter\MonitorXEstadod.cshtml" />
-    <Content Include="Views\Callcenter\ListarOrdenesDetalleXestatusRetraso.cshtml" />
     <Content Include="Views\Empresa\Create.cshtml" />
     <Content Include="Views\Empresa\Delete.cshtml" />
     <Content Include="Views\Empresa\Details.cshtml" />
