--- a/BlackSys/Content/DynaTables/bower.json
+++ b/BlackSys/Content/DynaTables/bower.json
@@ -9,9 +9,9 @@
   ],
   "authors": [
     {
-      "name": "Steve Schwartz",
-      "email": "steve@alfajango.com",
-      "homepage": "http://www.alfajango.com/blog"
+      "name": "Juan Byron Mercado",
+      "email": "djex100@gmail.com",
+      "homepage": ""
     }
   ],
   "dependencies": {
